Removed aether and betterportals;
Added chisels and bits and emoticons;
Tweak spawns of ice and fire.

--- a/config/ice_and_fire.cfg
+++ b/config/ice_and_fire.cfg
@@ -295,7 +295,7 @@ all {
     S:"Sea Serpent Base Health"=20.0
 
     # Whether or not sea serpents can break weak blocks in their way [default: true]
-    B:"Sea Serpent Griefing"=true
+    B:"Sea Serpent Griefing"=false
 
     # Maximum siren health [range: 1.0 ~ 10000.0, default: 50.0]
     S:"Siren Max Health"=50.0
@@ -316,13 +316,13 @@ all {
     B:"Spawn Cyclopes Caves"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 170]
-    I:"Spawn Cyclops Cave Chance"=170
+    I:"Spawn Cyclops Cave Chance"=570
 
     # True if deathworms are allowed to spawn [default: true]
     B:"Spawn Death Worms"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 75]
-    I:"Spawn Gorgon Chance"=75
+    I:"Spawn Gorgon Chance"=1000
 
     # True if gorgon temples are allowed to spawn [default: true]
     B:"Spawn Gorgons"=true
@@ -331,7 +331,7 @@ all {
     B:"Spawn Hippocampus"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 70]
-    I:"Spawn Hippocampus Chance"=70
+    I:"Spawn Hippocampus Chance"=550
 
     # True if hippogryphs are allowed to spawn [default: true]
     B:"Spawn Hippogryphs"=true
@@ -346,10 +346,10 @@ all {
     B:"Spawn Pixies"=true
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 60]
-    I:"Spawn Pixies Chance"=60
+    I:"Spawn Pixies Chance"=160
 
     # 1 out of this number chance per chunk for generation [range: 1 ~ 10000, default: 200]
-    I:"Spawn Sea Serpent Chance"=200
+    I:"Spawn Sea Serpent Chance"=1000
 
     # True if sea serpents are allowed to spawn [default: true]
     B:"Spawn Sea Serpents"=true
@@ -437,7 +437,7 @@ all {
      >
 
     # How far apart dragon dens, cyclops caves, gorgon temples etc should spawn apart from eachother (this is kept seperate for each type: a dragon roost can still spawn next to a myrmex hive) [range: 0 ~ 2147483647, default: 150]
-    I:"World Gen Distance"=150
+    I:"World Gen Distance"=200
 
     # true to use dimensional blacklist, false to use the whitelist. [default: true]
     B:"use Dimension Blacklist"=true
