--- a/mods/glibys-voice-chat-reloaded.pw.toml
+++ b/mods/glibys-voice-chat-reloaded.pw.toml
@@ -1,13 +1,13 @@
 name = "Gliby's Voice Chat Reloaded"
-filename = "Voice Chat Reloaded-1.2.5.jar"
+filename = "VoiceChatReloaded-1.12.2-1.3.0.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "b58189e1030ab7231e0984988a552f25a2280dc0"
+hash = "54a0eb2e88dfaf2e31b3f74d9511b62882bc6c2c"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3222659
+file-id = 3882806
 project-id = 296045
