--- a/config/cfm.cfg
+++ b/config/cfm.cfg
@@ -299,8 +299,28 @@ settings {
     # If true, prints out information about RecipeAPI. Recommended 'true' for people trying to add custom recipes. [default: false]
     B:recipe-api-debug=false
 
-    # Enabled or disable the welcome message [default: true]
+    # List of trusted domains to download images for the TV and Photo Frame. For example, the domain of the URL (https://i.imgur.com/Jvh1OQm.jpeg) is i.imgur.com [default: ]
+    S:trusted-url-domains <
+        i.imgur.com
+		imgur.com
+		giphy.com
+		discordapp.net
+		discordapp.com
+		tenor.com
+		media.discordapp.net
+		media.discordapp.com
+		media4.giphy.com
+		media3.giphy.com
+		media2.giphy.com
+		media1.giphy.com
+		media0.giphy.com
+		media.giphy.com
+		c.tenor.com
+		media1.tenor.com
+		media2.tenor.com
+		media3.tenor.com
+		media4.tenor.com 
+     >
     B:welcome_message=true
-}
-
+} 
 
