--- a/config/inventorypets/inventorypets.cfg
+++ b/config/inventorypets/inventorypets.cfg
@@ -32,7 +32,7 @@
     B:"Disable Hannukah"=false
     B:"Disable Heart"=false
     B:"Disable House"=false
-    B:"Disable Illuminati"=false
+    B:"Disable Illuminati"=true
     B:"Disable Iron Golem"=false
     B:"Disable Juggernaut"=false
     B:"Disable Jukebox"=false
@@ -76,7 +76,7 @@
     B:"All Players Must Be in Beds for Bed Pet to Work"=false
     B:"Allow Petrifier on Legendary Pets"=true
     I:"Chunks Biome Pet will Search Through"=256
-    I:"Cloud Fly Speed (1-4)"=3
+    I:"Cloud Fly Speed (1-4)"=1
     B:"Disable All Dungeons"=false
     B:"Disable All Pet Crafting"=false
     B:"Disable April Fool"=false
