--- a/config/mysticalworld.cfg
+++ b/config/mysticalworld.cfg
@@ -4,7 +4,7 @@ general {
     # Minimum distance between Barrow structures. Set to -1 to disable.
     # Min: -1
     # Max: 2147483647
-    I:BarrowDistance=400
+    I:BarrowDistance=4000
 
     # List of dimensions the barrow structure should not spawn in
     I:BarrowSpawnBlacklist <
@@ -16,7 +16,7 @@ general {
      >
 
     # Grant the Patchouli-based Guide Book when first joining the server
-    B:GiveBook=true
+    B:GiveBook=false
 
     # Mininmum distance between Hut structures. Set to -1 to disable.
     # Min: -1
