--- a/config/morph.cfg
+++ b/config/morph.cfg
@@ -16,10 +16,11 @@ abilities {
     # Separate each disabled ability with a comma
     # EG: fly,swim,sink [default: ]
     S:disabledAbilities <
+		fly
      >
 
     # morph.config.prop.enableFlight.comment [range: 0 ~ 1, default: 1]
-    I:enableFlight=1
+    I:enableFlight=0
 
     # Hostile Ability Distance Check for Hostile Ability Mode 4
     # You have to be *this* close before hostile mobs know you are not one of them.
