--- a/config/MoCreatures/MoCSettings.cfg
+++ b/config/MoCreatures/MoCSettings.cfg
@@ -117,16 +117,16 @@ monster-general-settings {
 
 ownership-settings {
     # Assigns player as owner for each creature they tame. Only the owner can interact with the tamed creature.
-    B:enableOwnership=false
+    B:enableOwnership=true
 
     # Allows players to remove a tamed creatures owner essentially untaming it.
-    B:enableResetOwnerScroll=false
+    B:enableResetOwnerScroll=true
 
     # Max tamed creatures an op can have. Requires enableOwnership to be set to true.
     I:maxTamedPerOP=20
 
     # Max tamed creatures a player can have. Requires enableOwnership to be set to true.
-    I:maxTamedPerPlayer=10
+    I:maxTamedPerPlayer=50
 }
 
 
