--- a/config/entityculling.cfg
+++ b/config/entityculling.cfg
@@ -35,6 +35,7 @@ general {
 
         # Tile entities which will always be rendered. (Accepts 'modid' or 'modid:entity_name')
         S:skipHiddenEntityRenderingBlacklist <
+			hats:hat
          >
 
         # Entities with a width or height greater than this value will always get rendered.
