--- a/config/travelersbackpack.cfg
+++ b/config/travelersbackpack.cfg
@@ -22,7 +22,7 @@ general {
         B:Loot=true
 
         # Places backpack at place where player died
-        B:"Place Backpack on Death"=true
+        B:"Place Backpack on Death"=false
         B:"Sleeping Bag Spawn Point"=false
         B:"Tool Slots Accept Swords"=false
     }
