--- a/mods/abyssalcraft.pw.toml
+++ b/mods/abyssalcraft.pw.toml
@@ -1,13 +1,13 @@
 name = "AbyssalCraft"
-filename = "AbyssalCraft-1.12.2-1.10.4.jar"
+filename = "AbyssalCraft-1.12.2-2.0.0-ALPHA-4.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "9b4f0106d15367c9da224de701320bd9c6ceaa7b"
+hash = "1f26db227dc37833bb89b57bb152366272f7a9e6"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3425234
+file-id = 3425238
 project-id = 53686
