--- a/mods/lolasm.pw.toml
+++ b/mods/lolasm.pw.toml
@@ -1,13 +1,13 @@
 name = "CensoredASM"
-filename = "loliasm-5.6.jar"
+filename = "censoredasm5.10.jar"
 side = "both"
 
 [download]
 hash-format = "sha1"
-hash = "47811ff3df2a56435e9518bd62a0eb5d92ea4f40"
+hash = "a409005e8fe35d3ae7817669bbc0f0f6a873f223"
 mode = "metadata:curseforge"
 
 [update]
 [update.curseforge]
-file-id = 3898244
+file-id = 4553503
 project-id = 460609
